sessão de contatos adicionada

--- a/index.html
+++ b/index.html
@@ -50,8 +50,34 @@
             </div>
         </div>
         
-        <div style="height:3000px;">
-            <p>aaa</p>
+        <div class="texture-2">
+            <div class="row">
+                <div class="large-3 show-for-large-up columns">  
+                </div>
+                <div class="large-6 medium-12 small-12 columns contact">
+                    <h2 class="contact">
+                        FALE<br />COM<br />A<br />HASH<br />WEB
+                    </h2>
+                    <form>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                    <input type="text" placeholder="nome" />
+                            </div>
+                            <div class="large-12 columns">
+                                <input type="text" placeholder="e-mail" />
+                            </div>
+                            <div class="large-12 columns">
+                                <input type="text" placeholder="telefone" />
+                            </div>
+                            <div class="large-12 columns">
+                                <textarea placeholder="mensagem"></textarea>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="large-3 show-for-large-up columns">  
+                </div>
+            </div>
         </div>
         
         <script src="/js/vendor/jquery.js"></script>
