andamentos na sessão contato

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                             <div class="large-12 columns">
                                 <textarea placeholder="mensagem"></textarea>
                             </div>
+                            <a href="#" class="button">enviar</a>
                         </div>
                     </form>
                 </div>
