--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <address>
                         <img src="img/logo_32.png" /><br />
                         <small>51</small> 9415.0924<br />
-                        contato@hashweb.com.br
+                        contato@hashweb.com.br<br />
                     </address>
                     <div class="fb-like" data-href="https://www.facebook.com/hashwebsolutions" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                 </div>
