--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                 </div>
                 <div class="large-3 show-for-large-up columns">
                     <address>
-                        <img src="img/logo_32.png" /><br />
-                        <small>51</small> 9415.0924<br />
-                        contato@hashweb.com.br<br />
+                        <img src="img/logo_32.png" /><br /><br />
+                        <small>51</small> 9415.0924<br /><br />
+                        contato@hashweb.com.br<br /><br />
                     </address>
-                    <div class="fb-like" data-href="https://www.facebook.com/hashwebsolutions" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+                    <div class="fb-like" data-href="https://www.facebook.com/hashwebsolutions" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
                 </div>
             </div>
         </div>
