--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           var js, fjs = d.getElementsByTagName(s)[0];
           if (d.getElementById(id)) return;
           js = d.createElement(s); js.id = id;
-          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=280817618656457&version=v2.0";
+          js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&appId=280817618656457&version=v2.0";
           fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
         
@@ -91,8 +91,8 @@
                         <img src="img/logo_32.png" /><br /><br />
                         <small>51</small> 9415.0924<br /><br />
                         contato@hashweb.com.br<br /><br />
+                        <div class="fb-like" data-href="https://www.facebook.com/hashwebsolutions" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
                     </address>
-                    <div class="fb-like" data-href="https://www.facebook.com/hashwebsolutions" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
                 </div>
             </div>
         </div>
