--- a/index.html
+++ b/index.html
@@ -82,7 +82,15 @@
                             <div class="large-12 columns">
                                 <textarea placeholder="mensagem"></textarea>
                             </div>
-                            <a href="#" class="button">enviar</a>
+                            
+                            <a href="#" data-reveal-id="myModal" class="button">enviar</a>
+                            
+                            <div id="myModal" class="reveal-modal" data-reveal>
+                              <h2>Awesome. I have it.</h2>
+                              <p class="lead">Your couch.  It is mine.</p>
+                              <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+                              <a class="close-reveal-modal">&#215;</a>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -102,7 +110,7 @@
         <script src="js/foundation.min.js"></script>
 
         <script>
-        $(document).foundation();
+            $(document).foundation();
         </script>
     </body>
 </html>
