testing success message - not succed

--- a/index.html
+++ b/index.html
@@ -82,11 +82,13 @@
                             <div class="large-12 columns">
                                 <textarea placeholder="mensagem"></textarea>
                             </div>
-                            <a href="#" data-reveal-id="success" class="button">enviar</a>
-                            
-                            <div id="success" class="reveal-modal tiny success" data-reveal>
-                              <p>mensagem<br />enviada.</p>
-                              <a class="close-reveal-modal"><small>x</small></a>
+                            <div class="submit-button-wrapper">
+                                <a href="#" data-reveal-id="success" class="button">enviar</a>
+
+                                <div id="success" class="reveal-modal tiny success" data-reveal>
+                                  <p>mensagem<br />enviada.</p>
+                                  <a class="close-reveal-modal"><small>x</small></a>
+                                </div>
                             </div>
                             
                         </div>
