minimal changes on the success tooltip

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                             <div class="large-12 columns">
                                 <textarea placeholder="mensagem"></textarea>
                             </div>
-                            <div class="submit-button-wrapper">
-                                <a href="#" class="button tooltipster" title="mensagem enviada.">enviar</a>
+                            <div id="success" class="submit-button-wrapper">
+                                <a href="#success" class="button tooltipster" title="mensagem enviada.">enviar</a>
                             </div>
                             
                         </div>
