fixed issues on form grid system and button:focus

--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
                     </h2>
                     <form>
                         <div class="row">
-                            <div class="large-12 columns">
+                            <div class="medium-6 medium-centered large-12 columns">
                                     <input type="text" placeholder="nome" />
                             </div>
-                            <div class="large-12 columns">
+                            <div class="medium-6 medium-centered large-12 columns">
                                 <input type="text" placeholder="e-mail" />
                             </div>
-                            <div class="large-12 columns">
+                            <div class="medium-6 medium-centered large-12 columns">
                                 <input type="text" placeholder="telefone" />
                             </div>
-                            <div class="large-12 columns">
+                            <div class="medium-6 medium-centered large-12 columns">
                                 <textarea placeholder="mensagem"></textarea>
                             </div>
                             
