menu item is now working on touch devices

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="large-1 show-for-large-up columns"></div>
                     <div class="large-11 columns">
                         <a data-scroll-nav="0" class="menu-logo"><img src="img/logo_32.png" /></a>
-                        <a data-scroll-nav="1" class="menu-item">Contato</a>
+                        <a data-scroll-nav="1" class="menu-item" href="#">Contato</a>
                     </div>
                 </div>
             </nav>
