changes on css, index.html and produtos.html

--- a/produtos.html
+++ b/produtos.html
@@ -28,19 +28,19 @@
                 <div class="row">
                     <div class="large-1 show-for-large-up columns"></div>
                     <div class="large-11 columns">
-                        <a data-scroll-nav="0" class="menu-logo"><img src="img/logo_32.png" /></a>
-                        <a href="produtos.html" class="menu-item" href="#">Produtos</a>
+                        <a href="index.html" class="menu-logo"><img src="img/logo_32.png" /></a>
+                        <a data-scroll-nav="0" class="menu-item" href="#">Produtos</a>
                         <a data-scroll-nav="1" class="menu-item" href="#">Contato</a>
                     </div>
                 </div>
             </nav>
         </div>
         
-        <div class="texture" data-scroll-index="0">
+        <div class="texture produtos" data-scroll-index="0">
             <div class="row">
                 <div class="large-3 medium-4 small-6 columns">
                     <h2 class="slogan">
-                        WEB<br />COM<br />PETI<br />TIVA
+                        PRO<br />DU<br />TOS
                     </h2>
                     <p class="description show-for-large-up">
                         Dedicada ao desenvolvimento de
@@ -50,7 +50,27 @@
                     </p>
                 </div>
                 <div class="large-6 medium-6 small-6 columns">
-                    <img class="logo-centro" src="img/logo-centro.png" />
+                    <h2>Sites</h2>
+
+                    <p>Desenvolvimento de site cross‐browser com layout inovador e atraente, com as tecnologias PHP, HTML5, CSS3, Java Script, J‐query. Todo o site desenvolvido vem com o sistema de gerenciamento de conteúdo (CMS), onde o usuário pode fazer atualizações no conteúdo do site quando necessário, sem a necessidade suporte.
+
+                    Desenvolvemos nossas aplicações encima do banco de dados PostgreSQL e MySQL, ou conforme a necessidade do cliente.  
+
+                    O desenvolvimento para e‐commerce segue o mesmo padrão de desenvolvimento do que é feito os nossos sites.
+
+                    Aplicação de SEO (Search Engine Optmization), é usado para optimização a busca do conteúdo do site, sempre colocando o site no topo dos sites de busca (google, yahoo, bing).
+
+                    <h2>Aplicativos Mobile</h2>
+
+                    Desenvolvemos aplicativos para suporte mobile, smartphones e tablets. Conforme a necessidade da empresa.  
+
+                    <h2>Social Mídia</h2>
+
+                    A aplicação de social mídia consiste em divulgar o produto e a marca nas redes sociais como facebook, twitter, instagram, foursquare. Criamos conteúdo com imagens com direitos autorais reservados e também com imagens disponibilizadas pela empresa contratante. Textos, chamadas e promoções de acordo com o contratante.
+
+                    <h2>Artes</h2>
+
+                    Desenvolvemos banners, vetorização de imagens, flyers, etiquetas, tratamentos de imagens usando o photoshop como principal ferramenta de trabalho.
                 </div>
                 <div class="large-3 medium-2 show-for-medium-up columns"></div>
             </div>
@@ -59,6 +79,7 @@
         <div class="texture-2" data-scroll-index="1">
             <div class="row">
                 <div class="large-3 show-for-large-up columns">  
+                    &nbsp;
                 </div>
                 <div class="large-6 medium-12 small-12 columns contact">
                     <h2 class="contact">
