solved title top margin issue

--- a/produtos.html
+++ b/produtos.html
@@ -36,7 +36,8 @@
         </div>
         
         <div class="texture produtos" data-scroll-index="0">
-                <h2 class="slogan">
+                <br />
+                <h2 class="slogan" style="padding-left: 80px;">
                     PRODUTOS
                 </h2>
                 
