change loop to true on  Swiper

--- a/produtos.html
+++ b/produtos.html
@@ -141,7 +141,7 @@
             window.onload = function() {
               var mySwiper = new Swiper('.swiper-container',{
                 mode:'horizontal',
-                loop: true
+                loop: false
               });
 
                 $('.arrow-left').on('click', function(e){
