fixed produtos text for small screens

--- a/produtos.html
+++ b/produtos.html
@@ -56,9 +56,9 @@
                       <div class="swiper-slide"> 
                         <div class="slide-padding">
                             <h2>Sites</h2>
-                            <p>Desenvolvimento de site cross‐browser com layout inovador e atraente, com as tecnologias PHP, HTML5, CSS3, Java Script, J‐query. Todo o site desenvolvido vem com o sistema de gerenciamento de conteúdo (CMS), onde o usuário pode fazer atualizações no conteúdo do site quando necessário, sem a necessidade suporte.
+                            <p>Desenvolvimento de site cross‐browser com layout inovador e atraente, com as tecnologias PHP, HTML5, CSS3, Java Script, J‐query. Todo o site desenvolvido vem com o sistema de gerenciamento de conteúdo (CMS), onde o usuário pode fazer atualizações no conteúdo do site quando necessário, sem a necessidade suporte.</p>
 
-                            Desenvolvemos nossas aplicações encima do banco de dados PostgreSQL e MySQL, ou conforme a necessidade do cliente.  
+                            <p class="show-for-medium-up">Desenvolvemos nossas aplicações encima do banco de dados PostgreSQL e MySQL, ou conforme a necessidade do cliente.  
 
                             O desenvolvimento para e‐commerce segue o mesmo padrão de desenvolvimento do que é feito os nossos sites.
 
