changed swiper loop to true

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             window.onload = function() {
               var mySwiper = new Swiper('.swiper-container',{
                 mode:'horizontal',
-                loop: false
+                loop: true
               });
 
                 $('.arrow-left').on('click', function(e){
