--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
         
-        <div class="texture produtos" data-scroll-index="1">
+        <div class="produtos" data-scroll-index="1">
                 <br />
                 <h2 class="slogan show-for-medium-up" style="padding-left: 80px;">
                     PRODUTOS
